syntax = "proto3";
//package user;
    option java_multiple_files= true;
option java_package = "proto.updateUser.proto";
option java_outer_classname = "getUserProto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "getUser.proto";
import "user.proto";

message UpdateUserRequest {
  string token = 1;
  UpdateUserData data = 2;
}

message UpdateUserResponse {
  Status status = 1;
}
message UpdateUserData {
  string role = 1;
  string phone_number = 2;
  string email = 3;
  string last_name = 4;
  string first_name = 5;
}